--- a/pom.xml
+++ b/pom.xml
@@ -90,10 +90,11 @@
             <version>0.17.0</version>
         </dependency>
 
+        <!--引入分页插件-->
         <dependency>
             <groupId>com.github.pagehelper</groupId>
-            <artifactId>pagehelper</artifactId>
-            <version>5.1.4</version>
+            <artifactId>pagehelper-spring-boot-starter</artifactId>
+            <version>1.2.12</version>
         </dependency>
 
         <dependency>
